Fix the title wrapping issue on Android Chrome browser

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,9 @@ main {
 .heading {
   font-size: 36px;
   font-weight: bold;
-  margin: 24px 36px;
+  margin: 24px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .work li {
